@@ -63,3 +63,4 @@ For 0.2.4:
 
 For 0.3:
 ----------
+* Volodymyr Floreskul <exufer@gmail.com>
