@@ -384,6 +384,12 @@ class TaskEditor :
                 self.task.set_due_date(datetoset)
             elif data == "closed" :
                 self.task.set_closed_date(datetoset)
+            #Set the due date to be equal to the start date
+            # when it happens that the start date is later than the due date
+            start_date = self.task.get_start_date()
+            due_date = self.task.get_due_date()
+            if start_date and (start_date > due_date):
+                self.task.set_due_date(self.task.get_start_date())
         else :
             #We should write in red in the entry if the date is not valid
             widget.modify_text(gtk.STATE_NORMAL, gtk.gdk.color_parse("#F00"))
